<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardCornerRadius="4dp"
    tools:context=".ui.main.DetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvName"
            style="@style/NameGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgAva"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imgAva"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.535"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/tvUsername"
            style="@style/UserGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgAva"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/username" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgAva"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.368"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
            app:srcCompat="@mipmap/ic_launcher"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/followerstring"
            style="@style/SideGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/imgAva"
            android:text="@string/followers"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.374"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followers" />


        <TextView
            android:id="@+id/followers"
            style="@style/FollowGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imgAva"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.386"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            tools:text="@string/number_followers" />

        <TextView
            android:id="@+id/followingstring"
            style="@style/SideGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/imgAva"
            android:text="@string/following"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.629"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/following" />


        <TextView
            android:id="@+id/following"
            style="@style/FollowGit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imgAva"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            tools:text="@string/number_following" />

        <LinearLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/followingstring">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_Data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tablayout"
                android:background="?attr/colorPrimary"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager2"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="178dp"
            android:backgroundTint="@color/blue"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            android:contentDescription="@string/button"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintEnd_toEndOf="@+id/imgAva"
            app:layout_constraintStart_toStartOf="@+id/imgAva"
            app:layout_constraintTop_toBottomOf="@+id/tvName"
            app:srcCompat="@drawable/baseline_favorite_border_24" />


        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="152dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/shareprof"
            android:drawableLeft="@drawable/baseline_screen_share_24"
            app:layout_constraintEnd_toEndOf="@+id/imgAva"
            app:layout_constraintStart_toStartOf="@+id/imgAva"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
